--- a/Rmd/03-growth_charts.Rmd
+++ b/Rmd/03-growth_charts.Rmd
@@ -7,9 +7,9 @@ knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 
 ## Chart naming conventions
 
-The link https://groeidiagrammen.nl/ocpu/lib/james/www/ contains an interactive overview of the available growth charts. There are 342 different charts: for boys and girls, for preterms, for different age ranges, for specific ethnic groups, for height, weight, BMI, and so on. Each chart has a chart code, a character code identifying the design. This section explains the construction of the chart codes.
+The link https://groeidiagrammen.nl/ocpu/lib/james/www/ contains an interactive overview of the available growth charts. There are many different charts: for boys and girls, for preterms, for different age ranges, for specific ethnic groups, for height, weight, BMI, and so on. Each chart has a chart code, a character code identifying the design. This section explains the construction of the chart codes.
 
-The GitHub repository https://github.com/stefvanbuuren/chartbox contains the chart libraries that are available to JAMES. The `list_charts()` function produces a tabular overview.
+The GitHub repository <https://github.com/growthcharts/chartbox> contains the chart libraries that are available to JAMES. The `list_charts()` function produces a tabular overview.
 
 ```{r chartlist, eval=TRUE}
 charts <- chartbox::list_charts()
@@ -19,10 +19,10 @@ charts[c(1, 22, 23, 300, 301, 340), ]
 
 The `chartbox` package currently contains three chart groups: `nl2010`, `preterm` and `who`. Each group collects charts of a similar type. 
 
-| Chart Group    |Charts | Chart code | Description                                     | Source
+| Chart Group | N | Chart code | Description                                     | Source
 |:------- | -----:|:---------- |:----------------------------------------------- |:---------
-|`nl2010` |   136 | CCCC       | Dutch children 0-21 years, including minorities | @talma2010
-|`preterm`|   192 | CCCCCNN    | Dutch preterms, ga <= 36 weeks, 0-4 years       | @bocca2012
+|`nl2010` |   140 | CCCC       | Dutch children 0-21 years, including minorities | @talma2010
+|`preterm`|   240 | CCCCCNN    | Dutch preterms, ga <= 36 weeks, 0-4 years       | @bocca2012
 |`who`    |    14 | CCCC       | WHO Child Growth Standards 0-4 years            | [WHO](https://www.who.int/childgrowth/en/)
 
 The chart code is an alpha-numeric code of four (for `nl2010` and `who`) or seven (for `preterm`) that uniquely identifies each of the charts. The table below specifies the full coding schema used to construct the chart codes.
@@ -45,6 +45,7 @@ The chart code is an alpha-numeric code of four (for `nl2010` and `who`) or seve
 |    4 | Side       | A     | A4, front           |
 |      |            | B     | A4, back            |
 |      |            | C     | A4, back, no `hdc`  |
+|      |            | D     | square, `dsc`       |
 |      |            | H     | square, `hgt`       |
 |      |            | O     | square, `hdc`       |
 |      |            | Q     | square, `bmi`       |
@@ -57,23 +58,25 @@ The chart code is an alpha-numeric code of four (for `nl2010` and `who`) or seve
 
 For illustration, code `NJAA` references to Dutch (`N`), boys (`J`), 0-15 month (`A`), front side (`A`). Likewise, `PMEAN33` codes for the chart of preterm (`M`), girls (`M`), 0-4 years (`E`), front side (`A`), Dutch language (`N`) born at 33 weeks of gestation (`33`).
 
-Some forms hold multiple growth charts. For example, the `NJAA` chart is designed for A4 paper size (297mm $\times$ 210mm) and contains three growth charts: head circumference by age, length by age, and weight by age. Some others have no diagram, like `NJAB` with explanations. All square formats hold one growth chart. All of the square forms have equal sizes (160mm $\times$ 160mm).
+Some forms hold multiple growth charts. For example, the `NJAA` chart is designed for A4 paper size (297mm $\times$ 210mm) and contains three growth charts: head circumference by age, length by age, and weight by age. Some others have no diagram, like `NJAB`. All square formats hold just one growth chart. All of the square forms have equal sizes (160mm $\times$ 160mm).
 
 The following table lists the measures per design-form combination. 
 
-| Design | Side  | Measure | Description
-|:------:|:-----:|:------- |:------------------------------------- |
+| Design | Side  | Measure   | Description
+|:------:|:-----:|:--------- |:------------------------------------- |
 |    A   |   A   | `hdc`     | Head circumference by age, 0-15 mo    |
 |        |       | `hgt`     | Length by age, 0-15 mo                |
 |        |       | `wgt`     | Weight by age, 0-15 mo                |
-|        |   B   |         |                                       |
+|        |   B   |           | Backside explanations                 |
+|        |   D   | `dsc`     | D-score by age, 0-15 mo               |
 |        |   H   | `hgt`     | Length by age, 0-15 mo                |
 |        |   O   | `hdc`     | Head circumference by age, 0-15 mo    |
 |        |   W   | `wgt`     | Weight by age, 0-15 mo                |
 |    B   |   A   | `wfh`     | Weight for height, 0-4 yr             |
 |        |       | `hgt`     | Length by age, 0-4 yr                 |
 |        |   B   | `hdc`     | Head circumference by age, 0-4 yr     |
-|        |   C   |         |                                       |
+|        |   C   |           | Backside explanations                 |
+|        |   D   | `dsc`     | D-score by age, 0-4 yr                | 
 |        |   H   | `hgt`     | Height by age, 0-4 yr                 |
 |        |   O   | `hdc`     | Head circumference by age, 0-4 yr     |
 |        |   R   | `wfh`     | Weight for height, 0-4 yr             |
